"Python debugging painfully slow and broken" - the debugging experience is painfully slow because we are using the debug/non-optimized python interpreter to run the code.  The fix is to use the retail/optimized python interpreter.
Time to hit first breakpoint:
Debug interpreter - ~40s
Retail interpreter - ~12s

--- a/cpython/Tools/pyuwp/pyuwpsdk/DesignTime/CommonConfiguration/Neutral/CPython.targets
+++ b/cpython/Tools/pyuwp/pyuwpsdk/DesignTime/CommonConfiguration/Neutral/CPython.targets
@@ -5,7 +5,7 @@
     <RedistPlatform Condition="'$(Platform)'=='x64'">x64</RedistPlatform>
     <RedistPlatform Condition="'$(Platform)'=='ARM'">arm</RedistPlatform>
     <RedistPlatform Condition="'$(RedistPlatform)'==''">x86</RedistPlatform>
-    <RedistConfiguration Condition="'$(Configuration)'=='Debug'">Debug</RedistConfiguration>
+    <!-- Use the retail python redist by default unless specified otherwise. -->
     <RedistConfiguration Condition="'$(RedistConfiguration)'==''">Retail</RedistConfiguration>
   </PropertyGroup>
   
