--- a/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
+++ b/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
@@ -328,11 +328,17 @@
     <ProjectReference Include="..\..\..\PCbuild\uwp\_elementtree.vcxproj">
       <Project>{83fa65c4-177f-46d3-afc2-9232a127cc68}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\PCbuild\uwp\_multiprocessing.vcxproj">
+      <Project>{f1c444ca-0f92-4305-aa21-f11a3550e041}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\PCBuild\uwp\_socket.vcxproj">
       <Project>{b2fbbf74-3e5a-4225-be87-54e54a4f88bc}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\..\PCbuild\uwp\_ssl.vcxproj">
       <Project>{5195eec7-59ab-4b59-a53b-83550aea89af}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PCbuild\uwp\_testcapi.vcxproj">
+      <Project>{dd7be91e-723a-4ef7-9abd-add15ceb19f6}</Project>
     </ProjectReference>
     <ProjectReference Include="..\ptvsdhelper\_ptvsdhelper.vcxproj">
       <Project>{18a52e7c-6207-43fc-879b-0dd7952967a2}</Project>
