Port _ctypes (or more accurately libffi_msvc) to ARM. - Calling into C APIs from python now works. - However, callbacks (or more accurately libffi closures) doesn't work.  It will throw a MemoryError during callback / closure allocation since a RWX (read/write/eXecute) memory page is not allowed in UWP. - callproc.c - fixed a crashing bug in FormatError() where a wchar** was passed to FormatMessageW() instead of a wchar* - callbacks.c - fixed an issue where CThunkObject::restype was not initialized to NULL.  This can cause a crash in CThunkObject_dealloc() where the function tries to read the ref count of CThunkObject::restype. - Fixed issues in _ctypes_test.vcxproj

--- a/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
+++ b/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
@@ -325,6 +325,9 @@
     <ProjectReference Include="..\..\..\PCBuild\uwp\_ctypes.vcxproj">
       <Project>{6bccda23-80f4-4c46-a82e-133d64b13fdb}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\PCbuild\uwp\_ctypes_test.vcxproj">
+      <Project>{e557e75d-d541-4141-be50-428c5589a5c4}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\PCbuild\uwp\_elementtree.vcxproj">
       <Project>{83fa65c4-177f-46d3-afc2-9232a127cc68}</Project>
     </ProjectReference>
