--- a/cpython/PCbuild/uwp/_ctypes.vcxproj
+++ b/cpython/PCbuild/uwp/_ctypes.vcxproj
@@ -98,7 +98,7 @@
     <ClCompile Include="..\..\Modules\_ctypes\libffi_msvc\prep_cif.c" />
     <ClCompile Include="..\..\Modules\_ctypes\stgdict.c" />
     <ClCompile Include="..\..\Modules\_ctypes\libffi_msvc\win32.c">
-      <ExcludedFromBuild Condition="'$(Platform)'=='x64' or '$(Platform)'=='arm'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Platform)'!='Win32'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +106,11 @@
       <ExcludedFromBuild Condition="'$(Platform)'!='x64'">true</ExcludedFromBuild>
       <Command>ml64 /nologo /c /Zi /Fo "$(IntDir)win64.obj" "%(FullPath)"</Command>
       <Outputs>$(IntDir)win64.obj;%(Outputs)</Outputs>
+    </CustomBuild>
+    <CustomBuild Include="..\..\Modules\_ctypes\libffi_msvc\arm.asm">
+      <ExcludedFromBuild Condition="'$(Platform)'!='ARM'">true</ExcludedFromBuild>
+      <Command>armasm -o "$(IntDir)arm.obj" "%(FullPath)"</Command>
+      <Outputs>$(IntDir)arm.obj;%(Outputs)</Outputs>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
