Disable COMDAT folding optimization.
See python issue 8847: the MSVC linker's COMDAT folding optimization causes failures in code that relies on distinct function addresses.

--- a/cpython/PCbuild/uwp/pythoncore.vcxproj
+++ b/cpython/PCbuild/uwp/pythoncore.vcxproj
@@ -92,6 +92,8 @@
       <EnableCOMDATFolding Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">false</EnableCOMDATFolding>
       <EnableCOMDATFolding Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</EnableCOMDATFolding>
       <EnableCOMDATFolding Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</EnableCOMDATFolding>
+      <EnableCOMDATFolding Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</EnableCOMDATFolding>
+      <EnableCOMDATFolding Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</EnableCOMDATFolding>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
