Add linker option /APPCONTAINER in uwp.props

--- a/cpython/PCbuild/uwp.props
+++ b/cpython/PCbuild/uwp.props
@@ -18,6 +18,7 @@
     </Link>
     <Link>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/APPCONTAINER %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
